# qubity

./: Dockerfile  README.md  TASK.md  docker-compose.yml  experiment.py  paths.py  pyproject.toml
data_loaders/: clients.py  loader.py  paths.py  time_conversion.py  tradeloader.py
data_loaders/models/: funding_rate.py  open_interest.py  timedata.py  trade.py
data_processors/: candle_filler.py  lazy.py  pandas_dataframe.py  pythonic.py
data_processors/models/: candles.py
examples/: funding_rate.py  hist_trades.py  no_api_key.py  open_interest.py
processed_data/: 2024-07-21.csv  2024-07-21.feather  result_lazy.csv  result_pandas.feather
